--- a/analyzingProductsentiment.ipynb
+++ b/analyzingProductsentiment.ipynb
@@ -11,6 +11,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "lovely-boring",
+   "metadata": {},
+   "source": [
+    "# Read product review data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "abroad-tractor",
