--- a/sentiment_analysis_script .ipynb
+++ b/sentiment_analysis_script .ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "proved-boost",
+   "id": "peripheral-advance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "english-stockholm",
+   "id": "wicked-yellow",
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "unlikely-solomon",
+   "id": "thousand-david",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "prime-sucking",
+   "id": "damaged-share",
    "metadata": {},
    "source": [
     "# examine the review for the most popular reviewed productts "
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "advance-thumbnail",
+   "id": "israeli-convergence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "particular-damages",
+   "id": "modern-helicopter",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "mexican-radius",
+   "id": "nonprofit-christianity",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "acquired-miller",
+   "id": "adjusted-style",
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "important-diabetes",
+   "id": "extensive-romantic",
    "metadata": {},
    "source": [
     " ## bulding sentiments analysis script \n",
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "bulgarian-commander",
+   "id": "rapid-temple",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "engaging-voluntary",
+   "id": "technical-breeding",
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "korean-glenn",
+   "id": "declared-effort",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "available-wedding",
+   "id": "gothic-booking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "assigned-piano",
+   "id": "clinical-grace",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "respiratory-picture",
+   "id": "atmospheric-technology",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "manual-state",
+   "id": "official-watts",
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adapted-lounge",
+   "id": "unsigned-bicycle",
    "metadata": {},
    "source": [
     "#  train our sentiment model "
@@ -786,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "appreciated-techno",
+   "id": "nutritional-fields",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "grave-pearl",
+   "id": "united-momentum",
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wound-shift",
+   "id": "solar-graduation",
    "metadata": {},
    "source": [
     "# Apply the sentiment classifier to better understand the Giraffe reviews"
@@ -1043,7 +1043,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "still-ribbon",
+   "id": "continental-senegal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,7 +1053,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "contrary-toilet",
+   "id": "regional-feedback",
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1231,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "senior-daughter",
+   "id": "mental-cassette",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1241,7 +1241,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "recreational-anchor",
+   "id": "split-prerequisite",
    "metadata": {},
    "outputs": [
     {
@@ -1420,7 +1420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "functional-blind",
+   "id": "colored-popularity",
    "metadata": {},
    "source": [
     "# Sort the Giraffe reviews according to predicted sentiment"
@@ -1429,7 +1429,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "legendary-revision",
+   "id": "english-adjustment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1440,7 +1440,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "english-mercury",
+   "id": "instrumental-consortium",
    "metadata": {},
    "outputs": [
     {
@@ -1620,7 +1620,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "adjustable-alberta",
+   "id": "figured-commons",
    "metadata": {},
    "outputs": [
     {
@@ -1797,7 +1797,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lucky-norway",
+   "id": "intermediate-tanzania",
    "metadata": {},
    "source": [
     "# show the most positive review "
@@ -1806,7 +1806,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "obvious-tanzania",
+   "id": "textile-channels",
    "metadata": {},
    "outputs": [
     {
@@ -1826,7 +1826,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unsigned-coating",
+   "id": "otherwise-acquisition",
    "metadata": {},
    "source": [
     "# show the most negative review "
@@ -1834,8 +1834,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "id": "robust-devil",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"This children's toy is nostalgic and very cute. However, there is a distinct rubber smell and a very odd taste, yes I tried it, that my baby did not enjoy. Also, if it is soiled it is extremely difficult to clean as the rubber is a kind of porus material and does not clean well. The final thing is the squeaking device inside which stopped working after the first couple of days. I returned this item feeling I had overpaid for a toy that was defective and did not meet my expectations. Please do not be swayed by the cute packaging and hype surounding it as I was. One more thing, I was given a full refund from Amazon without any problem.\""
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "giraffe_review[-1]['review']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "consistent-secretariat",
+   "id": "wrapped-technology",
    "metadata": {},
    "outputs": [],
    "source": []
